compile_errors_v2.txt
    Checking olympus v13.0.0 (/home/tdy/Escritorio/rocky)
error[E0432]: unresolved import `super::HeartbeatConfig`
  --> src/actors/erinyes/heartbeat.rs:12:22
   |
12 | use super::{GodName, HeartbeatConfig};
   |                      ^^^^^^^^^^^^^^^
   |                      |
   |                      no `HeartbeatConfig` in `actors::erinyes`
   |                      help: a similar name exists in the module: `HeartbeatMonitor`

error[E0407]: method `handle_command` is not a member of trait `OlympianActor`
   --> src/actors/erinyes/mod.rs:336:5
    |
336 | /     async fn handle_command(&mut self, cmd: CommandPayload) -> Result<ResponsePayload,...
337 | |         match cmd {
338 | |             CommandPayload::ConfigureHeartbeat { actor, interval_ms } => {
339 | |                 self.heartbeat_monitor.set_interval(actor, interval_ms).await;
...   |
370 | |     }
    | |_____^ not a member of trait `OlympianActor`

error[E0407]: method `handle_query` is not a member of trait `OlympianActor`
   --> src/actors/erinyes/mod.rs:372:5
    |
372 | /     async fn handle_query(&self, query: QueryPayload) -> Result<ResponsePayload, Actor...
373 | |         match query {
374 | |             QueryPayload::GetStats => {
375 | |                 let heartbeat_stats = self.heartbeat_monitor.get_stats().await;
...   |
460 | |     }
    | |_____^ not a member of trait `OlympianActor`

error[E0407]: method `handle_event` is not a member of trait `OlympianActor`
   --> src/actors/erinyes/mod.rs:462:5
    |
462 | /     async fn handle_event(&mut self, event: crate::traits::message::EventPayload) -> R...
463 | |         match event {
464 | |             crate::traits::message::EventPayload::ActorPanicked { actor, error } => {
465 | |                 self.watchdog.report_panic(actor, error.clone(), None).await;
...   |
502 | |     }
    | |_____^ not a member of trait `OlympianActor`

error[E0407]: method `persistent_state_async` is not a member of trait `OlympianActor`
   --> src/actors/erinyes/mod.rs:512:5
    |
512 |       async fn persistent_state_async(&self) -> serde_json::Value {
    |       ^        ---------------------- help: there is an associated function with a similar name: `persistent_state`
    |  _____|
    | |
